// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert component Should render alert with custom type with outlined variant 1`] = `
<View
  backgroundColorName="primary"
  borderColorName="primary"
  iconColorName="link"
  iconName="filled-action-check"
  message="Alert text message"
  messageColorName="link"
  style={
    Array [
      Object {
        "backgroundColor": "#f6be0029",
        "borderColor": "#f6be00",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "marginBottom": 16,
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 16,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
  testID="alert"
  title="title"
  titleColorName="link"
  type="custom"
  variant="outlined"
>
  <View
    style={
      Array [
        Object {
          "marginRight": 8,
          "marginTop": 2,
        },
      ]
    }
    testID="alert-icon"
  >
    <Text
      accessibilityRole="imagebutton"
      color="link"
      size="standard"
      style={
        Array [
          Object {
            "color": "red",
            "fontFamily": "natds-icons",
            "fontSize": 24,
          },
        ]
      }
      testID="natds-icon"
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
        },
      ]
    }
    testID="alert-content"
  >
    <Text
      backgroundColorName="primary"
      borderColorName="primary"
      iconColorName="link"
      iconName="filled-action-check"
      message="Alert text message"
      messageColorName="link"
      style={
        Array [
          Object {
            "color": "#1267cf",
            "flexWrap": "wrap",
            "fontFamily": "Roboto",
            "fontSize": 20,
            "fontWeight": "500",
            "letterSpacing": 0.24,
            "lineHeight": 30,
            "marginBottom": 8,
          },
        ]
      }
      title="title"
      titleColorName="link"
      type="custom"
      variant="outlined"
    >
      title
    </Text>
    <Text
      backgroundColorName="primary"
      borderColorName="primary"
      iconColorName="link"
      iconName="filled-action-check"
      message="Alert text message"
      messageColorName="link"
      style={
        Array [
          Object {
            "color": "#1267cf",
            "fontFamily": "Roboto",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.51,
            "lineHeight": 24,
          },
        ]
      }
      title="title"
      titleColorName="link"
      type="custom"
      variant="outlined"
    >
      Alert text message
    </Text>
  </View>
</View>
`;

exports[`Alert component Should render alert with default props 1`] = `
<View
  message="Alert text message"
  style={
    Array [
      Object {
        "backgroundColor": "#1267cf29",
        "borderRadius": 4,
        "borderWidth": 0,
        "flexDirection": "row",
        "marginBottom": 16,
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 16,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
  testID="alert"
  title="title"
  type="info"
  variant="standard"
>
  <View
    style={
      Array [
        Object {
          "marginRight": 8,
          "marginTop": 2,
        },
      ]
    }
    testID="alert-icon"
  >
    <Text
      accessibilityRole="imagebutton"
      color="neutral900"
      size="standard"
      style={
        Array [
          Object {
            "color": "red",
            "fontFamily": "natds-icons",
            "fontSize": 24,
          },
        ]
      }
      testID="natds-icon"
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
        },
      ]
    }
    testID="alert-content"
  >
    <Text
      message="Alert text message"
      style={
        Array [
          Object {
            "color": "#111111",
            "flexWrap": "wrap",
            "fontFamily": "Roboto",
            "fontSize": 20,
            "fontWeight": "500",
            "letterSpacing": 0.24,
            "lineHeight": 30,
            "marginBottom": 8,
          },
        ]
      }
      testID="alert"
      title="title"
    >
      title
    </Text>
    <Text
      message="Alert text message"
      style={
        Array [
          Object {
            "color": "#111111",
            "fontFamily": "Roboto",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.51,
            "lineHeight": 24,
          },
        ]
      }
      testID="alert"
      title="title"
    >
      Alert text message
    </Text>
  </View>
</View>
`;

exports[`Alert component Should render alert with outlined variant 1`] = `
<View
  message="Alert text message"
  style={
    Array [
      Object {
        "backgroundColor": "#1267cf29",
        "borderColor": "#1267cf",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "marginBottom": 16,
        "marginLeft": 16,
        "marginRight": 16,
        "marginTop": 16,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
  testID="alert"
  title="title"
  type="info"
  variant="outlined"
>
  <View
    style={
      Array [
        Object {
          "marginRight": 8,
          "marginTop": 2,
        },
      ]
    }
    testID="alert-icon"
  >
    <Text
      accessibilityRole="imagebutton"
      color="neutral900"
      size="standard"
      style={
        Array [
          Object {
            "color": "red",
            "fontFamily": "natds-icons",
            "fontSize": 24,
          },
        ]
      }
      testID="natds-icon"
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "flexShrink": 1,
        },
      ]
    }
    testID="alert-content"
  >
    <Text
      message="Alert text message"
      style={
        Array [
          Object {
            "color": "#111111",
            "flexWrap": "wrap",
            "fontFamily": "Roboto",
            "fontSize": 20,
            "fontWeight": "500",
            "letterSpacing": 0.24,
            "lineHeight": 30,
            "marginBottom": 8,
          },
        ]
      }
      title="title"
      variant="outlined"
    >
      title
    </Text>
    <Text
      message="Alert text message"
      style={
        Array [
          Object {
            "color": "#111111",
            "fontFamily": "Roboto",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.51,
            "lineHeight": 24,
          },
        ]
      }
      title="title"
      variant="outlined"
    >
      Alert text message
    </Text>
  </View>
</View>
`;
